add facebook authentication

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LawyerForum</string>
+    <string name="facebook_app_id">2110899535664683</string>
 </resources>
